[gd_scene load_steps=14 format=2]

[ext_resource path="res://resources/GFX/ui/ui_button.png" type="Texture" id=1]
[ext_resource path="res://resources/GFX/ui/ui_circle_full.png" type="Texture" id=2]
[ext_resource path="res://resources/GFX/ui/ui_circle_empty.png" type="Texture" id=3]
[ext_resource path="res://scenes/GUI/Menu/MenuTemplate.tres" type="Theme" id=4]
[ext_resource path="res://resources/Fonts/papercuts-2.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/Fonts/Cousine-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/GUI/HUD/HUD.gd" type="Script" id=7]
[ext_resource path="res://resources/GFX/ui/time_fuel_empty.png" type="Texture" id=8]
[ext_resource path="res://resources/GFX/ui/sandglass.png" type="Texture" id=9]
[ext_resource path="res://resources/GFX/ui/time_fuel_full.png" type="Texture" id=10]
[ext_resource path="res://resources/GFX/ui/tile_heart.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 6 )

[node name="HUD" type="CanvasLayer" groups=[
"HUD",
]]
script = ExtResource( 7 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.75
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 4 )
texture = ExtResource( 1 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect"]
anchor_right = 0.92
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Life1" type="TextureRect" parent="NinePatchRect/HBoxContainer4"]
margin_left = 145.0
margin_right = 169.0
margin_bottom = 21.0
texture = ExtResource( 11 )
stretch_mode = 3

[node name="Life2" type="TextureRect" parent="NinePatchRect/HBoxContainer4"]
margin_left = 169.0
margin_right = 193.0
margin_bottom = 21.0
texture = ExtResource( 11 )
stretch_mode = 3

[node name="Life3" type="TextureRect" parent="NinePatchRect/HBoxContainer4"]
margin_left = 193.0
margin_right = 217.0
margin_bottom = 21.0
texture = ExtResource( 11 )
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_right = 196.0
margin_bottom = 24.0
custom_constants/separation = 5

[node name="WeaponCooldown" type="TextureProgress" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 24.0
rect_min_size = Vector2( 30, 0 )
max_value = 1000.0
value = 500.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 4

[node name="WeaponName" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 35.0
margin_right = 89.0
margin_bottom = 24.0
size_flags_horizontal = 12
size_flags_vertical = 12
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Longbow"

[node name="WeaponAmmo" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 94.0
margin_top = 1.0
margin_right = 130.0
margin_bottom = 24.0
size_flags_horizontal = 12
size_flags_vertical = 12
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "(âˆž)"

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 28.0
margin_right = 196.0
margin_bottom = 52.0
custom_constants/separation = 5

[node name="EnemiesText" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 128.0
margin_bottom = 24.0
size_flags_horizontal = 12
size_flags_vertical = 12
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enemies remaining: "

[node name="EnemiesCount" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 133.0
margin_top = 1.0
margin_right = 193.0
margin_bottom = 24.0
size_flags_horizontal = 12
size_flags_vertical = 12
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10/10"

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 56.0
margin_right = 196.0
margin_bottom = 76.0
custom_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_right = 15.0
margin_bottom = 20.0
texture = ExtResource( 9 )

[node name="TimeFuel" type="TextureProgress" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 20.0
margin_right = 195.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 0 )
max_value = 10.0
step = 0.01
value = 10.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 10 )
